CSC110/lectures/week01/04-python-console-log-tom.txt
PyDev console: starting.
Python 3.10.6 (v3.10.6:9c7b4bd164, Aug  1 2022, 17:13:48) [Clang 13.0.0 (clang-1300.0.29.30)] on darwin
today = 'Thu 15 Sep 2022'
help(round)
Help on built-in function round in module builtins:
round(number, ndigits=None)
    Round a number to a given precision in decimal digits.
    
    The return value is an integer if ndigits is omitted or None.  Otherwise
    the return value has the same type as the number.  ndigits may be negative.
round(12.34)
12
round(12.34, 0)
12.0
round(123.456, 2)
123.46
round(1234.56, -2)
1200.0
def proc(x: int) -> None:
    """A demo"""
    z = x + 1
    
help(proc)
Help on function proc in module __main__:
proc(x: int) -> None
    A demo
proc(42)
def proc_2(y: float) -> float:
    """Return y cubed."""
    z = y * y
    a = z * y
    return a
proc_2(5)
125
proc_2(5.0)
125.0
def f_to_c(deg_f: float) -> float:
"""Return the celsius temperature corresponding to the fahrenheit measure deg_f.
>>> f_to_c(80.0)
26.666666666666668
>>> f_to_c(0.0)
-17.77777777777778
"""
return (deg_f - 32) * 5 / 9
Traceback (most recent call last):
  File "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/code.py", line 63, in runsource
    code = self.compile(source, filename, symbol)
  File "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/codeop.py", line 153, in __call__
    return _maybe_compile(self.compiler, source, filename, symbol)
  File "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/codeop.py", line 70, in _maybe_compile
    compiler(source + "\n", filename, symbol)
  File "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/codeop.py", line 118, in __call__
    codeob = compile(source, filename, symbol, self.flags, True)
  File "<input>", line 2
    """Return the celsius temperature corresponding to the fahrenheit measure deg_f.
    ^
IndentationError: expected an indented block after function definition on line 1
runfile('lecture04_tom.py')
distance(0.0, 0.0, 3.0, 4.0)
Traceback (most recent call last):
  File "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/code.py", line 90, in runcode
    exec(code, self.locals)
  File "<input>", line 1, in <module>
  File "/Users/tff/Library/Mobile Documents/com~apple~CloudDocs/Work/Teaching/pycharm-files/csc110/lectures/week01/lecture04_tom.py", line 24, in distance
    return (delta_x ** 2 + delta ** 2) ** 0.5
NameError: name 'delta' is not defined. Did you mean: 'delta_x'?
runfile('lecture04_tom.py')
distance(0.0, 0.0, 3.0, 4.0)
5.0
distance(-5.0, 0.0, 0.0 -12.0)
Traceback (most recent call last):
  File "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/code.py", line 90, in runcode
    exec(code, self.locals)
  File "<input>", line 1, in <module>
TypeError: distance() missing 1 required positional argument: 'y2'
runfile('lecture04_tom.py')
distance(-5.0, 0.0, 0.0 -12.0)
Traceback (most recent call last):
  File "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/code.py", line 90, in runcode
    exec(code, self.locals)
  File "<input>", line 1, in <module>
TypeError: distance() missing 1 required positional argument: 'y2'
distance(-5.0, 0.0, 0.0, -12.0)
13.0
str.lower('Today is Thursday')
'today is thursday'
str.split('Today is Thursday')
['Today', 'is', 'Thursday']
str.split('Today is Thursday', 'd')
['To', 'ay is Thurs', 'ay']
set.union({1, 2, 3}, {2, 4, 6})
{1, 2, 3, 4, 6}
list.count([1, 2, 1, 3, 1, 4], 1)
3

